# nornir_rich

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  demo.py  pyproject.toml
.github/workflows/: main.yaml
demo_inventory/: groups.yaml
docs/: print_functions.ipynb
nornir_rich/: __init__.py  functions.py  progress_bar.py
tests/: test_nornir_rich.py  test_print.py
tests/demo_inventory/: hosts.yaml
