[tool.poetry]
name = "nornir-rich"
version = "0.1.0"
description = "Collection of 'nice looking' functions with rich for nornir"
authors = ["ubaumann <github@m.ubaumann.ch>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
nornir = "^3.0.0"
rich = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
