[tool.poetry]
name = "nornir-rich"
version = "0.1.1"
description = "Collection of 'nice looking' functions with rich for nornir"
authors = ["ubaumann <github@m.ubaumann.ch>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
nornir = "^3"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22"
mypy = "^0.931"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.mypy]
python_version = "3.7"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "nornir.core"
ignore_errors = true
