[tool.poetry]
name = "nornir-rich"
version = "0.2.0"
description = "Collection of 'nice looking' functions with rich for nornir"
authors = ["ubaumann <github@m.ubaumann.ch>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/InfrastructureAsCode-ch/nornir_rich"
classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
nornir = "^3"
rich = "^12|^13"

[tool.poetry.dev-dependencies]
pytest = "^8"
black = {extras = ["jupyter"], version = "^24"}
mypy = "^1"
ipykernel = "*"
setuptools = {version = "*", python = ">=3.12"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
